# Backend

./: .dockerignore  .env.docker.template  .env.local.template  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  compose-infra.yaml  compose.yaml  pyproject.toml
scripts/: download_models.py
src/: logger.py
src/application/: __init__.py  bus.py  exceptions.py  transaction.py
src/application/interactor/: base.py  factory.py
src/application/recognition/: events.py  gateway.py  interactors.py
src/application/task/: __init__.py  events.py  interactors.py
src/domain/: recognizer.py
src/domain/image/: __init__.py  entity.py  repository.py
src/domain/task/: __init__.py  entity.py  event.py  repository.py  status.py
src/infrastructure/: __init__.py
src/infrastructure/domain_event_handlers/: __init__.py  task_events.py
src/infrastructure/integration_event_listener/: __main__.py  listener.py
src/infrastructure/integration_event_listener/handlers/: __init__.py  base.py  recognition_completed.py  task_status_updated.py
src/infrastructure/messaging/: __init__.py  utils.py
src/infrastructure/messaging/durable/: bus.py  provider.py  settings.py
src/infrastructure/messaging/fanout/: bus.py  provider.py  settings.py
src/infrastructure/outbox/: __init__.py  __main__.py  outbox.py  processor.py  router.py
src/infrastructure/outbox/sender/: __init__.py  base.py  integration_bus.py  recognition_gateway.py
src/infrastructure/persistence/: provider.py
src/infrastructure/persistence/models/: outbox.py
src/infrastructure/persistence/outbox/: outbox.py  provider.py
src/infrastructure/recognition/: __init__.py  grouping.py  provider.py  recognizer.py  utils.py
src/infrastructure/recognition/abc/: __init__.py  detection.py  recognition.py
src/infrastructure/recognition/implemenation/: detection.py  recognition.py  settings.py
src/infrastructure/recognition_worker/: __init__.py  __main__.py  broker.py  gateway.py  no_retry_middleware.py  notifier_middleware.py  provider.py  receiver.py  settings.py  tasks.py
src/infrastructure/recognition_worker/deduplication/: __init__.py  base.py  redis.py  (+1 more)
src/presentation/http/: __main__.py
(+25 files in other folders)
